--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="col-sm-8" id="forecastOne">
-          <div class="city"></div>
+          <div class="city" class ="card"></div>
           <div class="date"></div>
           <!-- <div class="weather-icon"><img src="icons/unknown.png"></div> -->
           <div class="temperature"></div>
