--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
         </div>
 
         <div class="col-sm-8" id="forecastOne">
-          <div class="city" class ="card"></div>
+          <div class="city card"></div>
           <div class="date"></div>
-          <!-- <div class="weather-icon"><img src="icons/unknown.png"></div> -->
+          <div class="weather-icon"><img id="iconImage" /></div>
           <div class="temperature"></div>
           <div class="humidity"></div>
           <div class="windSpeed"></div>
           <div class="uvIndex"></div>
-        </div>
-
-        <div class="col-sm-12" id="forecastFive">
-          five day
+          <div class="row">
+            <div class="col-sm-12" id="forecastFive">
+              five day
+            </div>
+          </div>
         </div>
       </div>
     </div>
