added 5 day and homework criteria

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4 card">
           <form id="search">
             <label>Search for a City:</label>
             <input type="text" id="searchCity" />
@@ -28,17 +28,17 @@
           </form>
         </div>
 
-        <div class="col-sm-8" id="forecastOne">
-          <div class="city card"></div>
-          <div class="date"></div>
+        <div class="col-sm-8 card" class="rounded-sm" id="forecastOne">
+          <div class="city"></div>
+          <div class="date">Date:</div>
           <div class="weather-icon"><img id="iconImage" /></div>
-          <div class="temperature"></div>
-          <div class="humidity"></div>
-          <div class="windSpeed"></div>
-          <div class="uvIndex"></div>
+          <div class="temperature">Temperature:</div>
+          <div class="humidity">Humidity:</div>
+          <div class="windSpeed">Wind Speed:</div>
+          <div class="uvIndex">UV Index:</div>
           <div class="row">
             <div class="col-sm-12" id="forecastFive">
-              five day
+              Five day forecast
             </div>
           </div>
         </div>
