--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="uvIndex">UV Index:</div>
           <div class="row">
             <div class="col-sm-12" id="forecastFive">
-              Five day forecast
+              Five Day Forecast
             </div>
           </div>
         </div>
